--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.5",
     "autoprefixer": "^10.4.20",
+    "moment": "^2.30.1",
     "pinia": "^2.2.2",
     "postcss": "^8.4.41",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.5",
     "tailwindcss": "^3.4.10",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
