--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.5",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "autoprefixer": "^10.4.20",
     "moment": "^2.30.1",
     "pinia": "^2.2.2",
