--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "autoprefixer": "^10.4.20",
+    "crypto-js": "^4.2.0",
     "moment": "^2.30.1",
     "pinia": "^2.2.2",
     "postcss": "^8.4.41",
@@ -23,6 +24,7 @@
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
